# md2pdf

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  test.md
src/md2pdf/: __init__.py  cli.py  convert.py
src/md2pdf/templates/: dark.typ  document.typ  print.typ
tests/: test_convert.py
